@@ -42,11 +42,12 @@ LOGDIR=${FILEDIR}/logs
 RPTDIR=${FILEDIR}/reports
 OUTPUTDIR=${FILEDIR}/output
 INPUTDIR=${FILEDIR}/input
-#INFILE_NAME_GZ=${DATADOWNLOADS}/go_noctua/mgi.gpad
-MGIINFILE_NAME_GZ=${DATADOWNLOADS}/go_noctua/mgi.gpad
-MGIINFILE_NAME_GPAD=${INPUTDIR}/mgi.gpad
-PRINFILE_NAME_GZ=${DATADOWNLOADS}/go_noctua/pr.gpad
-PRINFILE_NAME_GPAD=${INPUTDIR}/pr.gpad
+FROM_MGIINFILE_NAME_GZ=${DATADOWNLOADS}/go_noctua/noctua_mgi.gpad.gz
+MGIINFILE_NAME_GZ=${INPUTDIR}/noctua_mgi.gpad.gz
+MGIINFILE_NAME_GPAD=${INPUTDIR}/noctua_mgi.gpad
+FROM_PRINFILE_NAME_GZ=${DATADOWNLOADS}/go_noctua/noctua_pr.gpad.gz
+PRINFILE_NAME_GZ=${INPUTDIR}/noctua_pr.gpad.gz
+PRINFILE_NAME_GPAD=${INPUTDIR}/noctua_pr.gpad
 INFILE_NAME=${INPUTDIR}/gomousenoctua.annot
 INFILE_NAME_ERROR=${INPUTDIR}/gomousenoctua.error
 export FILEDIR ARCHIVEDIR LOGDIR RPTDIR OUTPUTDIR INPUTDIR
